--- a/example.qmd
+++ b/example.qmd
@@ -3,7 +3,9 @@ title: "Code Visibility"
 author: Shafayet Khan Shafee
 date: last-modified
 format: html
-comment-directive: "//>"
+comment-directive: 
+    - "#>"
+    - "#>"
 filters: 
   - code-visibility
 execute: 
@@ -34,8 +36,15 @@ mtcars %>%
 //> This is some hidden comment which is visible in code editor
 //> but not in rendered documents
 
-function square(x) {
-  return x * x;
-}
+viewof bill_length_min = Inputs.range(
+  [32, 50], 
+  {value: 35, step: 1, label: "Bill length (min):"}
+)
+viewof islands = Inputs.checkbox(
+  ["Torgersen", "Biscoe", "Dream"], 
+  { value: ["Torgersen", "Biscoe"], 
+    label: "Islands:"
+  }
+)
 ```
 
